@@ -23,26 +23,32 @@
 
  <dependencies>
 
+  <!-- WebFlux -->
   <dependency>
    <groupId>org.springframework.boot</groupId>
-   <artifactId>spring-boot-starter-web</artifactId>
+   <artifactId>spring-boot-starter-webflux</artifactId>
   </dependency>
 
+  <!-- R2DBC (IMPORTANT) -->
   <dependency>
    <groupId>org.springframework.boot</groupId>
-   <artifactId>spring-boot-starter-data-jpa</artifactId>
+   <artifactId>spring-boot-starter-data-r2dbc</artifactId>
   </dependency>
 
+  <!-- PostgreSQL Reactive Driver -->
+  <dependency>
+   <groupId>io.r2dbc</groupId>
+   <artifactId>r2dbc-postgresql</artifactId>
+   <version>0.8.13.RELEASE</version>
+  </dependency>
+
+  <!-- Security -->
   <dependency>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-security</artifactId>
   </dependency>
 
-  <dependency>
-   <groupId>org.postgresql</groupId>
-   <artifactId>postgresql</artifactId>
-  </dependency>
-
+  <!-- JWT -->
   <dependency>
    <groupId>io.jsonwebtoken</groupId>
    <artifactId>jjwt-api</artifactId>
@@ -63,16 +69,18 @@
    <scope>runtime</scope>
   </dependency>
 
+  <!-- Swagger (ONLY WebFlux) -->
+  <dependency>
+   <groupId>org.springdoc</groupId>
+   <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+   <version>2.5.0</version>
+  </dependency>
+
+  <!-- Lombok -->
   <dependency>
    <groupId>org.projectlombok</groupId>
    <artifactId>lombok</artifactId>
    <optional>true</optional>
-  </dependency>
-
-  <dependency>
-   <groupId>org.springdoc</groupId>
-   <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-   <version>2.5.0</version>
   </dependency>
 
  </dependencies>
@@ -82,6 +90,15 @@
    <plugin>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-maven-plugin</artifactId>
+   </plugin>
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+     <source>23</source>
+     <target>23</target>
+     <compilerArgs>--enable-preview</compilerArgs>
+    </configuration>
    </plugin>
   </plugins>
  </build>
